--- a/package.json
+++ b/package.json
@@ -13,6 +13,28 @@
   },
   "author": "Brandon Williams",
   "license": "MIT",
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/react-hooks": "^5.1.2",
+    "@types/jest": "^26.0.22",
+    "@types/query-string": "^4.3.1",
+    "@types/react": "^17.0.4",
+    "@types/react-router-dom": "^5.1.7",
+    "jest": "^26.6.3",
+    "query-string": "^4.3.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "react-test-renderer": "^17.0.2",
+    "rxjs": "^7.5.0",
+    "ts-jest": "^26.5.5",
+    "typescript": "^4.2.4"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "rxjs": "^7.5.0"
+  },
   "prettier": {
     "trailingComma": "all"
   }
