--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
   "scripts": {
     "build": "tsc",
     "link": "copy package.json dist\\package.json && cd dist && npm link",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "link-deps": "npm link @brandonwilliamscs/data-tools @brandonwilliamscs/react-data-tools"
   },
   "author": "Brandon Williams",
   "license": "MIT",
+  "dependencies": {
+    "axios": "^0.26.1",
+    "nock": "^13.2.4",
+    "query-string": "^4.3.4"
+  },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
@@ -22,7 +28,6 @@
     "@types/react": "^17.0.4",
     "@types/react-router-dom": "^5.1.7",
     "jest": "^26.6.3",
-    "query-string": "^4.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -33,6 +38,7 @@
   },
   "peerDependencies": {
     "react": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "rxjs": "^7.5.0"
   },
   "prettier": {
